--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=В
 an-error-occurred-while-scaling-the-abstract-image=Възникна грешка при мащабиране на абстрактното изображение. (Automatic Translation)
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Възникна грешка при изпращане на отчета. Опитайте отново след няколко минути. (Automatic Translation)
 an-experience-name-is-required=Изисква се име на опит. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Маската за въвеждане помага да се осигури предварително дефиниран формат. Тя може да бъде полезна за пощенски кодове, номера на карти и телефонни номера. Например маската +09 (999) 999-9999 става +12 (123) 123-1234 на формуляр. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Трябва ли непозна
 require-strangers-to-verify-their-email-address-help=Ако това е отметнато, новосъздадените акаунти от непознати или администратори ще се нуждаят от проверка. Ръчното актуализиране на имейлите на настоящите потребители от администраторите също ще се нуждае от проверка от новия имейл акаунт. (Automatic Translation)
 require-terms-of-use=Изискване на условия за ползване (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Задължителни разширения (Automatic Translation)
 required-field=Задължително поле (Automatic Translation)
 requires-log-in=Изисква влизане (Automatic Translation)
