--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=S'
 an-error-occurred-while-scaling-the-abstract-image=Un error ha ocorregut mentre s'escalava la imatge de resum.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=S'ha produït un error mentre s'enviava l'informe. Torneu-ho a provar en uns minuts.
 an-experience-name-is-required=Es requereix un nom d'experiència.
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Una màscara d'entrada permet garantir que es faci servir un format predefinit. Això pot ser útil per a codis postals, números de targeta i números de telèfon. Per exemple, la màscara «+09 (999) 999-9999» es converteix en «+12 (123) 123-1234» en un formulari.
 an-organization-of-type-x-cannot-be-a-root-organization=Una organització tipus "{0}" no pot ser una organització arrel.
 an-organization-of-type-x-cannot-have-children=Una organització tipus "{0}" no pot tenir fills.
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Voleu demanar als usuaris anòni
 require-strangers-to-verify-their-email-address-help=Si se selecciona aquesta opció, els comptes acabats de crear per desconeguts o administradors necessitaran una verificació. L'actualització manual de les adreces electròniques dels usuaris actuals per part dels administradors també necessitaran una verificació des del nou compte de correu electrònic.
 require-terms-of-use=Demanar acceptar les condicions d'ús
 require-x=Requereix {0}
+required-description=Required Description (Automatic Copy)
 required-extensions=Extensions obligatòries
 required-field=Camp obligatori
 requires-log-in=Necessari autentificar-se
