--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=De
 an-error-occurred-while-scaling-the-abstract-image=Der opstod en fejl under skalering af det abstrakte billede. (Automatic Translation)
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Der opstod en fejl under afsendelse af rapporten. Prøv igen om et par minutter. (Automatic Translation)
 an-experience-name-is-required=Der kræves et oplevelsesnavn. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=En inputmaske er med til at sikre et foruddefineret format. Det kan være nyttigt til postnumre, kortnumre og telefonnumre. Masken +09 (999) 999-9999 bliver f.eks. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Require strangers to verify thei
 require-strangers-to-verify-their-email-address-help=Hvis dette er markeret, skal nyoprettede konti af fremmede eller administratorer bekræftes. Manuel opdatering af aktuelle brugeres e-mails fra administratorer skal også bekræftes fra den nye e-mail-konto. (Automatic Translation)
 require-terms-of-use=Kræv vilkår for anvendelse (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Påkrævede udvidelser (Automatic Translation)
 required-field=Obligatorisk felt (Automatic Translation)
 requires-log-in=Kræver logon (Automatic Translation)
