--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Be
 an-error-occurred-while-scaling-the-abstract-image=Fehler beim Skalieren des Bildes für den Abstract.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Fehler beim Senden des Reports. Bitte versuchen Sie es in eingen Minuten erneut.
 an-experience-name-is-required=Name des Erlebnisses ist erforderlich.
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Eine Eingabemaske hilft, ein vordefiniertes Format zu gewährleisten. Sie kann für Postleitzahlen, Kartennummern und Telefonnummern nützlich sein. Zum Beispiel wird die Maske +09 (999) 999-9999 in einem Formular zu +12 (123) 123-1234.
 an-organization-of-type-x-cannot-be-a-root-organization=Eine Organisation vom Typ "{0}" kann keine Root-Organisation sein.
 an-organization-of-type-x-cannot-have-children=Eine Organisation vom Typ "{0}" kann keine untergeordneten Elemente haben.
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Müssen Fremde ihre E-Mail Adres
 require-strangers-to-verify-their-email-address-help=Wenn das aktiviert ist, müssen von Fremden oder Administratoren neu erstellte Konten verifiziert werden. Die manuelle Aktualisierung der E-Mails aktueller Benutzer durch Administratoren wird ebenfalls eine Verifizierung über das neue E-Mail-Konto erfordern.
 require-terms-of-use=Zustimmung zu Nutzungsbedingungen erforderlich
 require-x={0} erforderlich machen
+required-description=Required Description (Automatic Copy)
 required-extensions=Erforderliche Endungen
 required-field=Pflichtfeld
 requires-log-in=Anmeldung erforderlich
