--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=An
 an-error-occurred-while-scaling-the-abstract-image=An error occurred while scaling the abstract image.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=An error occurred while sending the report. Please try again in a few minutes.
 an-experience-name-is-required=An experience name is required.
+an-image-description-will-be-required=An image description will be required.
 an-input-mask-helps-to-ensure-a-predefined-format=An input mask helps to ensure a predefined format. It can be useful for zip codes, card numbers, and phone numbers. For example, the mask +09 (999) 999-9999 becomes +12 (123) 123-1234 on a form.
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization.
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children.
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Require strangers to verify thei
 require-strangers-to-verify-their-email-address-help=If this is checked, newly created accounts by strangers or administrators will need verification. Manual updating of current users' emails by administrators will also need verification from the new email account.
 require-terms-of-use=Require Terms of Use
 require-x=Require {0}
+required-description=Required Description
 required-extensions=Required Extensions
 required-field=Required Field
 requires-log-in=Requires Log In
