--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=A 
 an-error-occurred-while-scaling-the-abstract-image=Ha ocurrido un error al recortar la imagen abstracta.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Se ha producido un error al enviar la notificación. Por favor, inténtelo de nuevo pasados unos minutos.
 an-experience-name-is-required=Es necesario especificar un nombre de experiencia.
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Una máscara de entrada permite garantizar que se use un formato predefinido. Esto puede ser útil para códigos postales, números de tarjeta y números de teléfono. Por ejemplo, la máscara «+09 (999) 999-9999» se convierte en «+12 (123) 123-1234» en un formulario.
 an-organization-of-type-x-cannot-be-a-root-organization=Una organización del tipo "{0}" no puede ser una organización raíz.
 an-organization-of-type-x-cannot-have-children=Una organización del tipo "{0}" no puede tener organizaciones secundarias.
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=¿Requerir a los usuarios anóni
 require-strangers-to-verify-their-email-address-help=Si se activa esta opción, deberán verificarse las nuevas cuentas creadas por usuarios externos o administradores. Los administradores también tendrán que verificar las actualizaciones manuales de los correos electrónicos de los usuarios actuales desde la nueva cuenta de correo electrónico.
 require-terms-of-use=Requiere Términos de uso
 require-x={0} obligatorio
+required-description=Required Description (Automatic Copy)
 required-extensions=Extensiones Requeridas
 required-field=Campo obligatorio
 requires-log-in=Requiere inicio de sesión
