--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Ka
 an-error-occurred-while-scaling-the-abstract-image=Abstraktse pildi mastaapimisel ilmnes tõrge. (Automatic Translation)
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Raporti saatmisel tekkis viga. Proovi mõne minuti pärast uuesti.
 an-experience-name-is-required=Nõutav on kasutuskogemuse nimi. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Sisestusmask aitab tagada eelmääratletud vormingu. See võib olla kasulik sihtnumbrite, kaardinumbrite ja telefoninumbrite puhul. Näiteks mask +09 (999) 999-9999 muutub vormil +12 (123) 123-1234. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Kas nõuad võõrastelt e-postia
 require-strangers-to-verify-their-email-address-help=Sisselülitamisel vajavad kinnitamist võõraste või administraatorite äsja loodud kontod. Praeguste kasutajate e-kirjade käsitsi värskendamine administraatorite poolt vajab ka uue e-posti konto kinnitust. (Automatic Translation)
 require-terms-of-use=Nõua kasutustingimusi (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Nõutavad laiendused (Automatic Translation)
 required-field=Nõutav väli (Automatic Translation)
 requires-log-in=Nõuab sisselogimist (Automatic Translation)
