--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Ta
 an-error-occurred-while-scaling-the-abstract-image=Virhe leikatessa tiivistelmän kuvaa.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Tapahtui virhe raportin lähetyksessä. Yritä uudestaan muutaman minuutin kuluttua.
 an-experience-name-is-required=Kokemuksen nimi vaaditaan.
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Syöttömaski auttaa varmistamaan ennalta määrätyn muodon. Se voi olla hyödyllinen postinumeroille, korttien numeroille ja puhelinnumeroille. Esimerkiksi masskista +09 (999) 999-9999 tulee lomakkeella +12 (123) 123-1234.
 an-organization-of-type-x-cannot-be-a-root-organization=Organisaatio tyyppiä "{0}" ei voi olla pääorganisaatio.
 an-organization-of-type-x-cannot-have-children=Organisaatiolla tyyppiä "{0}" ei voi olla alempia tasoja.
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Vaadi tuntemattomia vahvistamaan
 require-strangers-to-verify-their-email-address-help=Jos tämä valitaan, uudet luodut tuntemattomien tai ylläpitäjien tilit tarvitsevat vahvistuksen. Nykyisen käyttäjien sähköpostien päivitys käsin ylläpitäjän toimesta vaatii myös vahvistuksen uudelta sähköpostitililtä.
 require-terms-of-use=Vaadi käyttöehdot
 require-x=Vaadittu {0}
+required-description=Required Description (Automatic Copy)
 required-extensions=Vaaditut Lisäosat
 required-field=Vaadittu Kenttä
 requires-log-in=Vaatii sisäänkirjautumisen
