--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Un
 an-error-occurred-while-scaling-the-abstract-image=Une erreur est survenu pendant l'agrandissement de l'image abstract.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Une erreur s'est produite tout en envoyant le rapport. Essayez svp encore en quelques minutes.
 an-experience-name-is-required=Un nom d'expérience est requis.
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Un masque de saisie permet de garantir un format prédéfini. Cela peut être utile pour les codes postaux, les numéros de carte et les numéros de téléphone. Par exemple, le masque +09 (999) 999-9999 devient +12 (123) 123-1234 sur un formulaire.
 an-organization-of-type-x-cannot-be-a-root-organization=Une organisation du type "{0}" ne peut être une organisation racine.
 an-organization-of-type-x-cannot-have-children=Une organisation du type "{0}" ne peut avoir d'enfant.
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Exiger des étrangers à vérifi
 require-strangers-to-verify-their-email-address-help=Si cette case est cochée, les comptes nouvellement créés par des inconnus ou des administrateurs doivent être vérifiés. La mise à jour manuelle des e-mail des utilisateurs actuels par les administrateurs devra également être vérifiée à partir du nouveau compte de messagerie.
 require-terms-of-use=Exiger condition d'utilisation
 require-x=Demander {0}
+required-description=Required Description (Automatic Copy)
 required-extensions=Extensions requises
 required-field=Champ requis
 requires-log-in=Nécessite Log in
