--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Hi
 an-error-occurred-while-scaling-the-abstract-image=Hiba történt az absztrakt kép méretezése közben.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=A jelentés továbbításakor hiba lépett fel. Egy kis idő múlva célszerű újra megpróbálni.
 an-experience-name-is-required=Az élmény elnevezése kötelező.
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Bemeneti maszk biztosítja az elődefiniált formátumot. Ez hasznos lehet az irányítószámoknál, kártyaszámoknál és telefonszámoknál. Például a +09 (999) 999-9999 maszk az űrlapon +12 (123) 123-1234 alakban jelenik meg.
 an-organization-of-type-x-cannot-be-a-root-organization=A {0} típusú szervezet nem lehet gyökérszervezet.
 an-organization-of-type-x-cannot-have-children=A "{0}" típusú szervezetnek nem lehet alárendelt szervezete.
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Idegenektől e-mail cím megerő
 require-strangers-to-verify-their-email-address-help=Ha be van jelölve, az idegenek vagy adminisztrátorok által újonnan létrehozott fiókok hitelesítést igényelnek majd. A jelenlegi felhasználók e-mailjeinek adminisztrátorok általi manuális frissítése szintén az új e-mail fiók hitelesítését igényli majd.
 require-terms-of-use=Felhasználási feltételeket igényelnek
 require-x={0} szükséges
+required-description=Required Description (Automatic Copy)
 required-extensions=Kötelező kiterjesztések
 required-field=Szükséges mező
 requires-log-in=Bejelentkezést igényel
