--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Ti
 an-error-occurred-while-scaling-the-abstract-image=Timbul galat saat menskalakan citra abstrak. (Automatic Translation)
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Terjadi kesalahan saat mengirim laporan. Silakan coba lagi dalam beberapa menit.
 an-experience-name-is-required=Diperlukan nama pengalaman. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Masker input membantu memastikan format yang telah ditentukan. Ini dapat berguna untuk kode pos, nomor kartu, dan nomor telepon. Misalnya, masker +09 (999) 999-9999 menjadi +12 (123) 123-1234 pada formulir. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Perlu Stranger untuk memverifika
 require-strangers-to-verify-their-email-address-help=Jika ini diperiksa, akun yang baru dibuat oleh orang asing atau administrator akan memerlukan verifikasi. Pembaruan manual email pengguna saat ini oleh administrator juga akan memerlukan verifikasi dari akun email baru. (Automatic Translation)
 require-terms-of-use=Ketentuan Penggunaan Yang Diperlukan (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Ekstensi yang Diperlukan (Automatic Translation)
 required-field=Bidang yang Diperlukan (Automatic Translation)
 requires-log-in=Membutuhkan Log-Masuk (Automatic Translation)
