--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Er
 an-error-occurred-while-scaling-the-abstract-image=Si è verificato un errore rimpicciolendo l'immagine del sommario.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Si è verificato un errore durante l'invio della segnalazione. Riprovare tra alcuni minuti.
 an-experience-name-is-required=È necessario un nome di esperienza. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Una maschera di input consente di garantire un formato predefinito. Può essere utile per cap, numeri di carta e numeri di telefono. Ad esempio, la maschera +09 (999) 999-9999 diventa +12 (123) 123-1234 in un modulo. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=Un'organizzazione di tipo "{0}" non può essere un'organizzazione radice.
 an-organization-of-type-x-cannot-have-children=Un'organizzazione di tipo "{0}" non può avere figli.
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Richiedere agli utenti non regis
 require-strangers-to-verify-their-email-address-help=Se questa opzione è selezionata, gli account appena creati da estranei o amministratori dovranno essere verificati. L'aggiornamento manuale delle e-mail degli utenti attuali da parte degli amministratori richiederà anche la verifica dal nuovo account di posta elettronica. (Automatic Translation)
 require-terms-of-use=Richiedi Condizioni di Utilizzo
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Estensioni necessarie (Automatic Translation)
 required-field=Campo obbligatorio (Automatic Translation)
 requires-log-in=Richiede Log In
