--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Nu
 an-error-occurred-while-scaling-the-abstract-image=Mastelio keitimo atvaizdo mastelio keitimo metu įvyko klaida. (Automatic Translation)
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Siunčiant ataskaitą įvyko klaida. Bandykite dar kartą po kelių minučių. (Automatic Translation)
 an-experience-name-is-required=Reikalingas patirties pavadinimas. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Įvesties šablonas padeda užtikrinti iš anksto nustatytą formatą. Tai gali būti naudinga pašto kodams, kortelių numeriams ir telefono numeriams. Pavyzdžiui, kaukė +09 (999) 999-9999 formoje tampa +12 (123) 123-1234. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Reikalauti nepažįstamų žmoni
 require-strangers-to-verify-their-email-address-help=Jei tai bus pažymėta, naujai sukurtas nepažįstamų asmenų ar administratorių paskyras reikės patikrinti. Administratoriams neautomatinis dabartinių vartotojų el. laiškų atnaujinimas taip pat turės būti patvirtintas iš naujos el. pašto paskyros. (Automatic Translation)
 require-terms-of-use=Reikalauti naudojimo sąlygų (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Būtini plėtiniai (Automatic Translation)
 required-field=Būtinas laukas (Automatic Translation)
 requires-log-in=Reikia prisijungti (Automatic Translation)
