--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Ra
 an-error-occurred-while-scaling-the-abstract-image=Ralat berlaku semasa menskalakan imej abstrak. (Automatic Translation)
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Ralat berlaku semasa menghantar laporan. Sila cuba lagi dalam beberapa minit. (Automatic Translation)
 an-experience-name-is-required=Nama pengalaman diperlukan. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Topeng input membantu memastikan format yang telah ditetapkan. Ia boleh berguna untuk kod zip, nombor kad, dan nombor telefon. Sebagai contoh, topeng +09 (999) 999-9999 menjadi +12 (123) 123-1234 dalam borang. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Memerlukan orang yang tidak dike
 require-strangers-to-verify-their-email-address-help=Jika ini disemak, akaun yang baru dicipta oleh orang yang tidak dikenali atau pentadbir memerlukan pengesahan. Pengemaskinian manual e-mel pengguna semasa oleh pentadbir juga memerlukan pengesahan daripada akaun e-mel baru. (Automatic Translation)
 require-terms-of-use=Memerlukan Terma Penggunaan (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Sambungan Yang Diperlukan (Automatic Translation)
 required-field=Medan Yang Diperlukan (Automatic Translation)
 requires-log-in=Memerlukan Log Masuk (Automatic Translation)
