--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=En
 an-error-occurred-while-scaling-the-abstract-image=En feil oppstod under skalering av abstraktbildet.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Feil oppsto under rapportinnsendingen. Vennligst prøv igjen om noen minutter.
 an-experience-name-is-required=Et opplevelsesnavn er påkrevd.
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=En inndatamaske bidrar til å sikre et forhåndsdefinert format. Det kan være nyttig for postnumre, kortnumre og telefonnumre. Masken +09 (999) 999-9999 blir for eksempel +12 (123) 123-1234 i et skjema. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Krev at ukjente skal verifisere 
 require-strangers-to-verify-their-email-address-help=Hvis dette er merket av, trenger nyopprettede kontoer av fremmede eller administratorer bekreftelse. Manuell oppdatering av nåværende brukeres e-poster av administratorer vil også trenge bekreftelse fra den nye e-postkontoen. (Automatic Translation)
 require-terms-of-use=Krev vilkår for bruk (Automatic Translation)
 require-x=Krev {0}
+required-description=Required Description (Automatic Copy)
 required-extensions=Nødvendige utvidelser (Automatic Translation)
 required-field=Påkrevd felt
 requires-log-in=Krever pålogging
