--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Er
 an-error-occurred-while-scaling-the-abstract-image=Er is een fout opgetreden tijdens het schalen van de afbeelding.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Er trad een fout op tijdens het verzenden van de melding. Probeer het over enkele minuten nog eens.
 an-experience-name-is-required=Een ervaringsnaam is verplicht.
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Een invoermasker helpt om een vooraf gedefinieerd formaat te garanderen. Dit kan nuttig zijn voor postcodes, kaartnummers en telefoonnummers. Zo zal het masker +09 (999) 999-9999 in een formulier +12 (123) 123-1234 worden.
 an-organization-of-type-x-cannot-be-a-root-organization=Een organisatie van het type '{0}' kan geen rootorganisatie zijn.
 an-organization-of-type-x-cannot-have-children=Een organisatie van het type '{0}' kan geen onderliggende organisaties hebben.
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Moeten nieuwe gebruikers hun e-m
 require-strangers-to-verify-their-email-address-help=Als dit is geselecteerd, moeten nieuwe accounts van vreemden of beheerders worden geverifieerd. Ook wanneer beheerders e-mailadressen van bestaande gebruikers handmatig bijwerken, moet het nieuwe e-mailaccount worden geverifieerd.
 require-terms-of-use=Gebruiksvoorwaarden vereisen
 require-x={0} vereisen
+required-description=Required Description (Automatic Copy)
 required-extensions=Vereiste extensies
 required-field=Verplicht veld
 requires-log-in=Vereist login
