--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=An
 an-error-occurred-while-scaling-the-abstract-image=An error occurred while scaling the abstract image. (Automatic Copy)
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Er trad een fout op tijdens de verzending van het rapport. Probeer het over enkele minuten opnieuw.
 an-experience-name-is-required=An experience name is required. (Automatic Copy)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=An input mask helps to ensure a predefined format. It can be useful for zip codes, card numbers, and phone numbers. For example, the mask +09 (999) 999-9999 becomes +12 (123) 123-1234 on a form. (Automatic Copy)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Vereist onbekenden om hun e-mail
 require-strangers-to-verify-their-email-address-help=If this is checked, newly created accounts by strangers or administrators will need verification. Manual updating of current users' emails by administrators will also need verification from the new email account. (Automatic Copy)
 require-terms-of-use=Require Terms of Use (Automatic Copy)
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Required Extensions (Automatic Copy)
 required-field=Required Field (Automatic Copy)
 requires-log-in=Requires Log In (Automatic Copy)
