--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Wy
 an-error-occurred-while-scaling-the-abstract-image=Wystąpił błąd podczas skalowania obrazu abstrakcyjnego. (Automatic Translation)
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Podczas wysyłania raportu wystąpił błąd. Proszę spróbować ponownie za kilka minut.
 an-experience-name-is-required=Wymagana jest nazwa środowiska. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Maska wprowadzania pomaga zapewnić wstępnie zdefiniowany format. Może być przydatny w przypadku kodów pocztowych, numerów kart i numerów telefonów. Na przykład maska +09 (999) 999-9999 staje się +12 (123) 123-1234 w formularzu. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Wymagać od obcych weryfikacji a
 require-strangers-to-verify-their-email-address-help=Jeśli ta kontrola jest zaznaczona, nowo utworzone konta przez nieznajomych lub administratorów będą wymagały weryfikacji. Ręczna aktualizacja wiadomości e-mail bieżących użytkowników przez administratorów będzie również wymagać weryfikacji z nowego konta e-mail. (Automatic Translation)
 require-terms-of-use=Wymagaj warunków użytkowania (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Wymagane rozszerzenia (Automatic Translation)
 required-field=Wymagane pole (Automatic Translation)
 requires-log-in=Wymaga logowania (Automatic Translation)
