--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Um
 an-error-occurred-while-scaling-the-abstract-image=Um erro ocorreu ao redimensionar a imagem do abstrato.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Um erro ocorreu enquanto enviava o relatório. Por favor, tente novamente em alguns minutos.
 an-experience-name-is-required=É necessário um nome de experiência.
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Uma máscara de entrada é usada para garantir um formato predefinido. Isso pode ser útil para códigos postais, números de cartão e números de telefone. Por exemplo, a máscara +09 (999) 999-9999 torna-se +12 (123) 123-1234 em um formulário.
 an-organization-of-type-x-cannot-be-a-root-organization=Uma organização do tipo "{0}" não pode ser uma organização raiz.
 an-organization-of-type-x-cannot-have-children=Uma organização do tipo "{0}" não pode ter filhos.
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Obrigar estranhos à verificarem
 require-strangers-to-verify-their-email-address-help=Se selecionado, as contas recém criadas por estranhos ou administradores precisarão de verificação. A atualização manual dos e-mails de usuários atuais por administradores também precisarão verificadas através da nova conta de e-mail.
 require-terms-of-use=Requer Termos de Uso
 require-x=Tornar {0} obrigatório
+required-description=Required Description (Automatic Copy)
 required-extensions=Extensão necessária
 required-field=Campo obrigatório
 requires-log-in=Exige Login
