--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Um
 an-error-occurred-while-scaling-the-abstract-image=Ocorreu um erro ao redimensionar a imagem do sumário.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Ocorreu um erro ao enviar o relatório. Por favor, volte a tentar dentro de alguns minutos.
 an-experience-name-is-required=Um nome de experiência é necessário. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Uma máscara de entrada ajuda a garantir um formato predefinido. Pode ser útil para CEP, números de cartões e números de telefone. Por exemplo, a máscara +09 (999) 999-9999 torna-se +12 (123) 123-1234 em um formulário. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Exigir que estranhos verifiquem 
 require-strangers-to-verify-their-email-address-help=Se isso for verificado, contas recém-criadas por estranhos ou administradores precisarão de verificação. A atualização manual dos e-mails dos usuários atuais pelos administradores também precisará de verificação da nova conta de e-mail. (Automatic Translation)
 require-terms-of-use=Exigir Termos de Uso
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Extensões necessárias (Automatic Translation)
 required-field=Campo Obrigatório (Automatic Translation)
 requires-log-in=Requer Login
