--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Er
 an-error-occurred-while-scaling-the-abstract-image=Eroare la scalarea imaginii abstracte. (Automatic Translation)
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=O eroare a apărut în timpul trimiterii raportului. Te rog încearcă din nou în câteva minute.
 an-experience-name-is-required=Este necesar un nume de experiență. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=O mască de intrare ajută la asigurarea unui format predefinit. Poate fi util pentru coduri poștale, numere de card și numere de telefon. De exemplu, masca +09 (999) 999-9999 devine +12 (123) 123-1234 pe un formular. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Solicita strainilor sa isi verif
 require-strangers-to-verify-their-email-address-help=Dacă acest lucru este verificat, conturile nou create de străini sau administratori vor avea nevoie de verificare. Actualizarea manuală a e-mailurilor utilizatorilor actuali de către administratori va avea nevoie, de asemenea, de verificare din noul cont de e-mail. (Automatic Translation)
 require-terms-of-use=Necesită termeni de utilizare (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Extensii necesare (Automatic Translation)
 required-field=Câmp obligatoriu (Automatic Translation)
 requires-log-in=Necesită conectare (Automatic Translation)
