--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Pr
 an-error-occurred-while-scaling-the-abstract-image=Pri zmene veľkosti obrázku abstraktu sa vyskytla chyba.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Pri posielaní reportu nastala chyba. Kontaktujte prosím administrátora.
 an-experience-name-is-required=Vyžaduje sa názov skúsenosti. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Vstupná maska pomáha zabezpečiť preddefinovaný formát. Môže to byť užitočné pre PSČ, čísla kariet a telefónne čísla. Napríklad maska +09 (999) 999-9999 sa zmení na +12 (123) 123-1234 vo formulári. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Vyžadovať od cudzincov kontrol
 require-strangers-to-verify-their-email-address-help=Ak je táto voľba zapnutá, novovytvorené účty cudzích ľudí alebo správcov budú potrebovať overenie. Manuálna aktualizácia e-mailov súčasných používateľov správcami bude tiež potrebovať overenie z nového e-mailového konta. (Automatic Translation)
 require-terms-of-use=Požadovať Podmienky použitia
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Požadované rozšírenia (Automatic Translation)
 required-field=Povinné pole (Automatic Translation)
 requires-log-in=Požaduje prihlásenie
