--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Pr
 an-error-occurred-while-scaling-the-abstract-image=Med razmahom abstraktne slike je prišlo do napake. (Automatic Translation)
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Prišlo je do napake pri pošiljanju poročila. Prosimo, poskusite ponovno čez nekaj minut.
 an-experience-name-is-required=Zahtevano je ime izkušnje. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Maska za vnos pomaga zagotoviti vnaprej določeno obliko zapisa. Uporabna je lahko za poštne številke, številke kartic in telefonske številke. Maska +09 (999) 999-9999 na primer postane +12 (123) 123-1234 na obrazcu. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Zahtevam, da se neznance preverj
 require-strangers-to-verify-their-email-address-help=Če je to preverjeno, bodo na novo ustvarjeni računi tujcev ali skrbnikov potrebovali preverjanje. Ročno posodabljanje e-poštnih sporočil trenutnih uporabnikov s strani skrbnikov bo prav tako potrebovalo preverjanje iz novega e-poštnega računa. (Automatic Translation)
 require-terms-of-use=Zahtevajte pogoje uporabe (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Zahtevane razširitve (Automatic Translation)
 required-field=Zahtevano polje (Automatic Translation)
 requires-log-in=Zahteva prijavo (Automatic Translation)
