--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Et
 an-error-occurred-while-scaling-the-abstract-image=Ett fel inträffade när sammanfattningsbilden skulle skalas.
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Ett fel uppstod när rapporten skulle skickas. Försök igen om några minuter.
 an-experience-name-is-required=Namn på upplevelse krävs.
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Med en indatamask kan du säkerställa ett fördefinierat format. Det kan vara användbart för postnummer, kortnummer och telefonnummer. Masken +09 (999) 999-9999 blir exempelvis +12 (123) 123-1234 i ett formulär.
 an-organization-of-type-x-cannot-be-a-root-organization=En organisation av typen "{0}" får inte vara en rotorganisation.
 an-organization-of-type-x-cannot-have-children=En organisation av typen "{0}" kan inte ha underordnade element.
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Behöver främlingar verifiera s
 require-strangers-to-verify-their-email-address-help=Om detta markeras måste nya konton som skapas av främlingar eller administratörer verifieras. Manuell uppdatering av nuvarande användares e-postadresser av administratörer måste också verifieras från det nya e-postkontot.
 require-terms-of-use=Kräv användarvillkor
 require-x=Kräv {0}
+required-description=Required Description (Automatic Copy)
 required-extensions=Obligatoriska tillägg
 required-field=Obligatoriskt fält
 requires-log-in=Inloggning krävs
