--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -730,6 +730,7 @@ an-error-occurred-while-retrieving-user-info-from-the-openid-connect-provider=Op
 an-error-occurred-while-scaling-the-abstract-image=Soyut görüntü ölçeklenirken bir hata oluştu. (Automatic Translation)
 an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes=Rapor gönderilirken beklenmeyen bir hata oluştu. Lütfen bir kaç dakika içinde tekrar deneyiniz.
 an-experience-name-is-required=Bir deneyim adı gereklidir. (Automatic Translation)
+an-image-description-will-be-required=An image description will be required. (Automatic Copy)
 an-input-mask-helps-to-ensure-a-predefined-format=Giriş maskesi, önceden tanımlanmış bir biçimin sağlanmasına yardımcı olur. Posta kodları, kart numaraları ve telefon numaraları için yararlı olabilir. Örneğin, +09 (999) 999-9999 maskesi formda +12 (123) 123-1234 olur. (Automatic Translation)
 an-organization-of-type-x-cannot-be-a-root-organization=An organization of type "{0}" cannot be a root organization. (Automatic Copy)
 an-organization-of-type-x-cannot-have-children=An organization of type "{0}" cannot have children. (Automatic Copy)
@@ -7423,6 +7424,7 @@ require-strangers-to-verify-their-email-address=Yabancılara e-posta doğrulama 
 require-strangers-to-verify-their-email-address-help=Bu işaretlenirse, yabancılar veya yöneticiler tarafından yeni oluşturulan hesapların doğrulanması gerekir. Mevcut kullanıcıların e-postalarının yöneticiler tarafından manuel olarak güncellenmesi de yeni e-posta hesabından doğrulamaya ihtiyaç duyacaktır. (Automatic Translation)
 require-terms-of-use=Kullanım Koşulları Gerektir (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
+required-description=Required Description (Automatic Copy)
 required-extensions=Gerekli Uzantılar (Automatic Translation)
 required-field=Gerekli Alan (Automatic Translation)
 requires-log-in=Oturum Açmayı Gerektirir (Automatic Translation)
